<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Zone Login -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/hintlogin"
            android:inputType="text"
            />
    </LinearLayout>

    <!-- Zone Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/hintpassword"
            android:inputType="textPassword" />
    </LinearLayout>

    <!-- Bouton -->
    <Button
        android:id="@+id/btnValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:background="#1c8dcb"
        />
</LinearLayout>